<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/textView1"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:text="@string/title_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/listWrap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/listStub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_items"
                android:textAlignment="center"
                android:textColor="@color/grey_dark"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_item"
            app:layout_constraintEnd_toEndOf="@+id/listWrap"
            app:layout_constraintStart_toStartOf="@+id/listWrap"
            app:layout_constraintTop_toBottomOf="@+id/listWrap"
            android:onClick="onClickAddItem"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>